Added StoreManagerController and views

--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-c4041b31-b788-43fa-bd0b-21b206254c9a;Trusted_Connection=True;MultipleActiveResultSets=true",
     "MvcBookContext": "Server=(localdb)\\mssqllocaldb;Database=MvcBookContext-dede7bf6-ca5a-41c4-8977-7a98c78a016b;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MvcBookGenreContext": "Server=(localdb)\\mssqllocaldb;Database=MvcBookGenreContext-6d1a249c-bfc2-46d9-a68d-fd0c9cb43277;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MvcBookGenreContext": "Server=(localdb)\\mssqllocaldb;Database=MvcBookGenreContext-6d1a249c-bfc2-46d9-a68d-fd0c9cb43277;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MvcAlbumContext": "Server=(localdb)\\mssqllocaldb;Database=MvcAlbumContext-3b004146-9a99-475c-aea0-e799eaa19180;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
